--- a/CSS/om.css
+++ b/CSS/om.css
@@ -1,6 +1,7 @@
 body {
     display: block;
     font-family: 'Heebo', sans-serif;
+    margin: 0;
 }
 
 .image {
@@ -9,46 +10,71 @@ body {
 
 .omListview {
     background-color: #E9B935;
+    padding: 2em;
 }
 
 h2 {
     color: #0B584D;
     font-weight: 100;
-    padding: 2em;
 }
 
 p {
     color: white;
     font-weight: 300;
-    padding: 2em;
 }
 
+@media screen and (min-width:500px){
+    .column{
+        padding-left: 5em;
+        padding-right: 5em;
+    }
+
+    .column1{
+        padding-left: 3em;
+        padding-right: 3em;
+    }
+}
 
 @media screen and (min-width:768px) {
 
-/*
+    .column{
+        padding: 0em;
+    }
+
+    .column1{
+        padding-left: 0em;
+        padding-right: 0em;
+    }
+
+   .row {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+    }
+
     .image {
-        height: 600px;
-        width: 90%;
-        margin-top: 30px;
-        margin-left: 10px;
-
+        grid-column: 1/2;
+        grid-row: 1/2;
     }
 
-    .column {
-        float: left;
-        width: 50%;
-        margin-bottom: 50px;
-        font-size: 1.3em;
+    .column1 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        padding-left: 1em;
     }
 
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-*/
 }
+
+@media screen and (min-width:1000px){
+    .column{
+        padding: 5em;
+    }
+
+    .column1{
+        padding-top: 5em;
+    }
+}
+
 
 /*-----------til toppen knappen----------*/
 
