--- a/CSS/header.css
+++ b/CSS/header.css
@@ -28,8 +28,6 @@ ul {
     grid-template-rows: repeat(4, 1fr);
 }
 
-
-
 .nav_logo {
     width: 250px;
     display: none;
@@ -86,9 +84,14 @@ nav.show {
     transform: rotate(45deg) translate(-4px, -8px);
 }
 
-    .dropdown{
-        display: none;
-    }
+.dropdown-content {
+    display: none;
+
+}
+
+.dropdown-content a {
+display: none;
+}
 
 
 
@@ -103,14 +106,18 @@ nav.show {
         display: grid;
         grid-template-columns: repeat (6, 1fr);
     }
+
+
     .nav_logo {
 
         display: block;
         justify-self: center;
     }
+
     .burgermenu {
         display: none;
     }
+
     ul {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
@@ -124,16 +131,19 @@ nav.show {
     li:hover{
         color: darkgray;
     }
+
+
+
 .dropdown {
-    float:inherit;
+    float: inherit;
     overflow: inherit;
 }
 
 .dropdown-content {
     display: none;
-    position:sticky;
+    position: absolute;
     background-color: #f9f9f9;
-    min-width: 100px;
+    min-width: 200px;
     z-index: 1;
     float:inherit;
 }
@@ -141,7 +151,7 @@ nav.show {
 .dropdown-content a {
     float: none;
     color: black;
-    padding: 22px 16px;
+    padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: center;
@@ -149,8 +159,7 @@ nav.show {
     font-weight: 100;
 }
 
-.dropdown-content a:hover
-    {
+.dropdown-content a:hover {
     background-color: #ddd;
 }
 
@@ -158,5 +167,3 @@ nav.show {
     display: block;
 
 }
-    }
-
