--- a/CSS/header.css
+++ b/CSS/header.css
@@ -101,9 +101,13 @@
             display: none;
         }
 
+.mobil_link
+
 
 
     @media screen and (min-width:768px) {
+
+
         .burger {
             display: none;
         }
@@ -132,7 +136,7 @@
         ul {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
-            grid-template-rows: 1fr;
+
         }
 
         a {
