--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,184 +1,168 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    header {
+.mobil {
+    display: grid;
+    background-color: white;
+    position: fixed;
+    width: 100%;
+
+
+}
+
+.burgermenu {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.burger {
+    cursor: pointer;
+    background: white;
+    border: none;
+    justify-self: end;
+    padding: 1em;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+
+}
+
+.nav_logo {
+    width: 250px;
+    display: none;
+
+}
+
+.nav_burger_logo {
+    width: 240px;
+}
+
+li {
+    padding-top: 30px;
+    cursor: pointer;
+    text-align: center;
+    font-family: heebo, sans-serif;
+    text-decoration: none;
+    color: black;
+    font-weight: 100;
+}
+
+a{
+        text-decoration: none;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+    width: 30px;
+    height: 1px;
+    background-color: black;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+nav {
+    max-height: 0px;
+    overflow: hidden;
+    transition: 0s;
+    table-layout: red;
+    color: blue;
+}
+
+nav.show {
+    max-height: 500px;
+}
+
+.change .bar1 {
+    transform: rotate(-45deg) translate(-2px, 6px);
+}
+
+.change .bar2 {
+    opacity: 0;
+}
+
+.change .bar3 {
+    transform: rotate(45deg) translate(-4px, -8px);
+}
+
+
+@media screen and (min-width:768px) {
+
+
+    .mobil{
+        display: none;
+    }
+
+
+
+    nav {
+        max-height: 200px;
         display: grid;
-        background-color: white;
-        position: fixed;
-        width: 100%;
+        grid-template-columns: repeat (6, 1fr);
+    }
+
+
+    .nav_logo {
+
+        display: block;
+        justify-self: center;
     }
 
     .burgermenu {
-        background-color: white;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .burger {
-        cursor: pointer;
-        background: white;
-        border: none;
-        justify-self: end;
-        padding: 1em;
+        display: none;
     }
 
     ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
         display: grid;
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 1fr;
     }
 
-    .nav_logo {
-        width: 250px;
-        display: none;
-    }
-
-    .logo_desk {
-        display: none;
-    }
-
-    .nav_burger_logo {
-        width: 240px;
-    }
-
-    a {
+    a{
         text-decoration: none;
     }
 
-    li {
-        padding-top: 30px;
-        cursor: pointer;
-        text-align: center;
-        font-family: heebo, sans-serif;
-        text-decoration: none;
-        color: black;
-        font-weight: 100;
-    }
-
-    li:hover {
+    li:hover{
         color: darkgray;
     }
 
-    .bar1,
-    .bar2,
-    .bar3 {
-        width: 30px;
-        height: 1px;
-        background-color: black;
-        margin: 6px 0;
-        transition: 0.4s;
-    }
-
-    nav {
-        max-height: 0px;
-        overflow: hidden;
-        transition: 0s;
-        table-layout: red;
-        color: blue;
-    }
 
 
+.dropdown {
+    float: inherit;
+    overflow: inherit;
+}
 
-    nav.show {
-        max-height: 500px;
-    }
+.dropdown-content {
+    display: none;
+    position:sticky;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    z-index: 1;
+    float:inherit;
+}
 
-    .change .bar1 {
-        transform: rotate(-45deg) translate(-2px, 6px);
-    }
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    font-family: 'heebo', sans-serif;
+    font-weight: 100;
+}
 
-    .change .bar2 {
-        opacity: 0;
-    }
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
 
-    .change .bar3 {
-        transform: rotate(45deg) translate(-4px, -8px);
-    }
+.dropdown:hover .dropdown-content {
+    display: block;
 
+}
 
-    .dropdown {
-            display: none;
-        }
-
-.mobil_link
-
-
-
-    @media screen and (min-width:768px) {
-
-
-        .burger {
-            display: none;
-        }
-
-        nav {
-            max-height: 200px;
-            display: grid;
-            grid-template-columns: repeat (6, 1fr);
-        }
-
-
-        .nav_logo {
-
-            display: block;
-            justify-self: center;
-        }
-
-        .logo_desk {
-            display: block;
-        }
-
-        .burgermenu {
-            display: none;
-        }
-
-        ul {
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-
-        }
-
-        a {
-            text-decoration: none;
-        }
-
-        li:hover {
-            color: darkgray;
-        }
-
-
-
-        .dropdown {
-            float: inherit;
-            overflow: inherit;
-        }
-
-        .dropdown-content {
-            display: none;
-            position: sticky;
-            background-color: #f9f9f9;
-            min-width: 100px;
-            z-index: 1;
-            float: inherit;
-        }
-
-        .dropdown-content a {
-            float: none;
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: center;
-            font-family: 'heebo', sans-serif;
-            font-weight: 100;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-
-        }
