--- a/CSS/header.css
+++ b/CSS/header.css
@@ -135,6 +135,12 @@ nav.show {
 .dropdown {
     float: inherit;
     overflow: inherit;
+
+
+      display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 1fr;
+
 }
 
 .dropdown-content {
