--- a/CSS/header.css
+++ b/CSS/header.css
@@ -26,6 +26,7 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
+
     display: grid;
     grid-template-rows: repeat(4, 1fr);
 
@@ -120,55 +121,30 @@ nav.show {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: 1fr;
+          padding-top: 30px;
     }
 
     a{
         text-decoration: none;
     }
 
-    li:hover{
-        color: darkgray;
-    }
-
-
-
 .dropdown {
-    float: inherit;
-    overflow: inherit;
-
-
-      display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: 1fr;
-
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-content {
-    display: none;
-    position:sticky;
-    background-color: #f9f9f9;
-    min-width: 200px;
-    z-index: 1;
-    float:inherit;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    font-family: 'heebo', sans-serif;
-    font-weight: 100;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+    display: block;}
+
 
 }
-
