--- a/CSS/boligstyling.css
+++ b/CSS/boligstyling.css
@@ -2,6 +2,18 @@ body{
     margin: 0;
 }
 
+#more {display: none;}
+
+#readmore{
+    background: none;
+    padding: 20px 20px;
+    position: relative;
+    bottom: 40px;
+    left: 20px;
+
+
+}
+
 .stylingeventListview{
     background-color: #db938f;
 }
@@ -24,6 +36,15 @@ body{
 }
 
 @media screen and (min-width:640px){
+
+    #readmore{
+
+    bottom: 40px;
+    left: 60px;
+
+
+}
+
     .description{
     padding-left: 5em;
     padding-right: 5em;
@@ -31,13 +52,45 @@ body{
 }
 
 @media screen and (min-width:780px){
+       #readmore{
+
+    bottom: 40px;
+    left: 180px;
+
+
+}
     .description{
     padding-left: 8em;
     padding-right: 8em;
 }
 }
+@media screen and (min-width:821px){
+       #readmore{
+
+    bottom: 40px;
+    left: 120px;
+
+
+    }}
+@media screen and (min-width:881px){
+       #readmore{
+
+    bottom: 40px;
+    left: 120px;
+
+
+    }}
+
 
 @media screen and (min-width:920px){
+           #readmore{
+
+    bottom: 40px;
+    left: 190px;
+
+
+}
+
     .description{
     padding-left: 10em;
     padding-right: 10em;
@@ -45,15 +98,37 @@ body{
 }
 }
 
-@media screen and (min-width:1100px){
-    .description{
-    padding-left: 14em;
-    padding-right: 14em;
-    font-size: 1.2em;
+@media screen and (min-width:1000px){
+                   #readmore{
+
+    bottom: 40px;
+    left: 190px;
+
+
 }
 }
 
+@media screen and (min-width:1100px){
+
+               #readmore{
+
+    bottom: 40px;
+    left: 190px;
+
+
+}
+
+}
+
 @media screen and (min-width:1300px){
+
+                   #readmore{
+
+    bottom: 40px;
+    left: 290px;
+
+
+}
     .description{
     padding-left: 16em;
     padding-right: 16em;
@@ -114,18 +189,19 @@ img{
     }
 }
 
-/*----------til toppen knap-----------*/
+/*    --------til toppen knappen----------*/
 
 #button {
+    border-radius: 50%;
     display: none;
     position: fixed;
     bottom: 20px;
     right: 30px;
     z-index: 99;
     font-size: 18px;
-    border: none;
+
     outline: none;
-    background-color: white;
+    background-color: #E6C9C7;
     color: black;
     font-family: 'Open Sans Condensed', sans-serif;
     cursor: pointer;
