--- a/CSS/eventstyling.css
+++ b/CSS/eventstyling.css
@@ -20,10 +20,32 @@ body{
     padding-right: 2em;
     padding-bottom: 2em;
     font-family: 'Heebo', sans-serif;
-    font-weight: 300;
+    font-weight: 100;
+    font-size: 1em;
 }
 
+#readmore{
+    background: none;
+    padding: 20px 20px;
+    position: relative;
+    bottom: 40px;
+    left: 20px;
+
+
+}
+
+
+
+
 @media screen and (min-width:640px){
+
+        #readmore{
+
+    bottom: 40px;
+    left: 60px;
+
+
+}
     .description{
     padding-left: 5em;
     padding-right: 5em;
@@ -31,21 +53,69 @@ body{
 }
 
 @media screen and (min-width:780px){
+           #readmore{
+
+    bottom: 40px;
+    left: 180px;
+
+
+}
     .description{
     padding-left: 8em;
     padding-right: 8em;
 }
 }
+@media screen and (min-width:821px){
+       #readmore{
+
+    bottom: 40px;
+    left: 120px;
+
+
+    }}
+@media screen and (min-width:881px){
+       #readmore{
+
+    bottom: 40px;
+    left: 120px;
+
+
+    }}
 
 @media screen and (min-width:920px){
+               #readmore{
+
+    bottom: 40px;
+    left: 190px;
+
+
+}
+
     .description{
     padding-left: 10em;
     padding-right: 10em;
     font-size: 1.2em;
 }
 }
+@media screen and (min-width:1000px){
+                   #readmore{
+
+    bottom: 40px;
+    left: 190px;
+
+
+}
+}
+
 
 @media screen and (min-width:1100px){
+                       #readmore{
+
+    bottom: 40px;
+    left: 190px;
+
+
+}
     .description{
     padding-left: 14em;
     padding-right: 14em;
@@ -54,6 +124,13 @@ body{
 }
 
 @media screen and (min-width:1300px){
+     #readmore{
+
+    bottom: 40px;
+    left: 290px;
+
+
+}
     .description{
     padding-left: 16em;
     padding-right: 16em;
@@ -64,10 +141,13 @@ body{
 /*styling af event boksene*/
 
 .portfolioListview{
-    padding: 2em;
+    padding: 1em;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 1fr);
+
+
+
 }
 
 .heading_events{
@@ -91,6 +171,16 @@ img{
 }
 
 @media screen and (min-width:540px){
+
+    .portfolioListview{
+    padding: 1em;
+
+
+
+
+}
+
+
     .events_portfolio{
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -103,6 +193,14 @@ img{
 }
 
 @media screen and (min-width:1000px){
+      .portfolioListview{
+    padding: 1em;
+
+
+
+
+}
+
     .events_portfolio{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -114,18 +212,19 @@ img{
     }
 }
 
-/*til toppen knap*/
+/*    --------til toppen knappen----------*/
 
 #button {
+    border-radius: 50%;
     display: none;
     position: fixed;
     bottom: 20px;
     right: 30px;
     z-index: 99;
     font-size: 18px;
-    border: none;
+
     outline: none;
-    background-color: white;
+    background-color: #E6C9C7;
     color: black;
     font-family: 'Open Sans Condensed', sans-serif;
     cursor: pointer;
