--- a/CSS/header.css
+++ b/CSS/header.css
@@ -2,8 +2,8 @@
 .mobil {
     display: grid;
     background-color: white;
-    position: fixed;
     width: 100%;
+    margin-bottom: 40px;
 
 
 }
@@ -91,11 +91,17 @@ nav.show {
 }
 
 
+
+
 @media screen and (min-width:768px) {
 
 
     .mobil{
         display: none;
+    }
+
+    .desktop{
+        margin-bottom: 50px;
     }
 
 
@@ -129,18 +135,30 @@ nav.show {
     }
 
 .dropdown {
-  position: relative;
-  display: inline-block;
+overflow: hidden;
+    transition: .3s;
+
+
 }
 
 .dropdown-content {
+    z-index: 90;
   display: none;
-  position: sticky;
-  background-color: #f9f9f9;
-  min-width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  background-color: white;
+
+width: 20%;
   padding: 12px 16px;
-  z-index: 1;
+    position: absolute;
+
+    left: 0%;
+    transition: .3s;
+    text-align-last: left;
+
+
+
+
+
+
 }
 
 .dropdown:hover .dropdown-content {
@@ -148,3 +166,60 @@ nav.show {
 
 
 }
+
+
+@media screen and (min-width:800px) {
+    .dropdown-content {
+
+width: 15%;
+
+    left: 3%;
+
+
+
+    }}
+@media screen and (min-width:825px) {
+    .dropdown-content {
+
+width: 15%;
+
+    left: 1%;
+
+
+
+    }}
+
+@media screen and (min-width:1082px) {
+    .dropdown-content {
+
+width: 15%;
+
+    left: 4%;
+
+
+
+    }}
+
+@media screen and (min-width:1262px) {
+    .dropdown-content {
+
+width: 15%;
+
+    left: 5%;
+
+
+
+    }}
+
+@media screen and (min-width:1468px) {
+    .dropdown-content {
+
+width: 15%;
+
+    left: 5.5%;
+
+
+
+    }}
+
+
