--- a/CSS/single_eventstyling.css
+++ b/CSS/single_eventstyling.css
@@ -184,18 +184,19 @@ img {vertical-align: middle;}
   .prev, .next,.text {font-size: 11px}
 }
 
-/*-----------til toppen knap----------*/
+/*    --------til toppen knappen----------*/
 
 #button {
+    border-radius: 50%;
     display: none;
     position: fixed;
     bottom: 20px;
     right: 30px;
     z-index: 99;
     font-size: 18px;
-    border: none;
+
     outline: none;
-    background-color: white;
+    background-color: #E6C9C7;
     color: black;
     font-family: 'Open Sans Condensed', sans-serif;
     cursor: pointer;
