--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,7 +1,3 @@
-   .desktop{
-        display: none;
-    }
-
 
 .mobil {
     display: grid;
@@ -104,7 +100,7 @@ nav.show {
 
 
 
-@media screen and (min-width:768px) {
+@media screen and (max-width:768px) {
 
 
     .mobil{
