--- a/CSS/om.css
+++ b/CSS/om.css
@@ -30,7 +30,7 @@ p {
     }
 }
 
-@media screen and (min-width:768px) {
+@media screen and (max-width:768px) {
 
     .column{
         padding: 0em;
