--- a/CSS/header.css
+++ b/CSS/header.css
@@ -8,13 +8,10 @@
 
 }
 
-
-
 .burgermenu {
     background-color: white;
     display: grid;
     grid-template-columns: 1fr 1fr;
-
 }
 
 .burger {
@@ -23,7 +20,6 @@
     border: none;
     justify-self: end;
     padding: 1em;
-
 }
 
 ul {
@@ -82,9 +78,6 @@ nav.show {
     max-height: 500px;
 }
 
-
-
-
 .change .bar1 {
     transform: rotate(-45deg) translate(-2px, 6px);
 }
@@ -100,7 +93,7 @@ nav.show {
 
 
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:768px) {
 
 
     .mobil{
