--- a/CSS/boligstyling.css
+++ b/CSS/boligstyling.css
@@ -6,16 +6,21 @@ body{
 
 #myBtn{
     background: none;
-    padding: 20px 20px;
-    position: relative;
-    bottom: 40px;
-    left: 20px;
+    padding: 5px 5px;
+    width: 100%;
+    font-size: 1em;
+   border: none;
+padding-bottom: 2em;
+
+
+
 
 
 }
 
 .stylingeventListview{
     background-color: #db938f;
+
 }
 
 .heading{
@@ -37,14 +42,6 @@ body{
 
 @media screen and (min-width:640px){
 
-    #readmore{
-
-    bottom: 40px;
-    left: 60px;
-
-
-}
-
     .description{
     padding-left: 5em;
     padding-right: 5em;
@@ -52,44 +49,16 @@ body{
 }
 
 @media screen and (min-width:780px){
-       #readmore{
 
-    bottom: 40px;
-    left: 180px;
-
-
-}
     .description{
     padding-left: 8em;
     padding-right: 8em;
 }
 }
-@media screen and (min-width:821px){
-       #readmore{
-
-    bottom: 40px;
-    left: 120px;
-
-
-    }}
-@media screen and (min-width:881px){
-       #readmore{
-
-    bottom: 40px;
-    left: 120px;
-
-
-    }}
 
 
 @media screen and (min-width:920px){
-           #readmore{
 
-    bottom: 40px;
-    left: 190px;
-
-
-}
 
     .description{
     padding-left: 10em;
@@ -98,37 +67,10 @@ body{
 }
 }
 
-@media screen and (min-width:1000px){
-                   #readmore{
 
-    bottom: 40px;
-    left: 190px;
-
-
-}
-}
-
-@media screen and (min-width:1100px){
-
-               #readmore{
-
-    bottom: 40px;
-    left: 190px;
-
-
-}
-
-}
 
 @media screen and (min-width:1300px){
 
-                   #readmore{
-
-    bottom: 40px;
-    left: 290px;
-
-
-}
     .description{
     padding-left: 16em;
     padding-right: 16em;
