--- a/CSS/om.css
+++ b/CSS/om.css
@@ -4,71 +4,71 @@
 }
 
 .omListview {
-    background-color: #E9B935;
-    padding: 2em;
+background-color: #6C9A95;
+
+
+}
+
+.row {
+
+      -webkit-column-count: 1; /* Chrome, Safari, Opera */
+  -moz-column-count: 1; /* Firefox */
+  column-count: 1;
+
+  -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+  -moz-column-gap: 40px; /* Firefox */
+  column-gap: 40px;
+
 }
 
 h2 {
     color: #0B584D;
-    font-weight: 100;
+    font-family: 'Heebo', sans-serif;
+    padding: 10px 10px;
+
 }
 
 p {
     color: white;
     font-weight: 300;
+
+    font-family: 'Heebo', sans-serif;
+     padding: 10px 10px;
 }
 
-@media screen and (min-width:500px){
-    .column{
-        padding-left: 5em;
-        padding-right: 5em;
-    }
 
-    .column1{
-        padding-left: 3em;
-        padding-right: 3em;
-    }
-}
 
-@media screen and (max-width:768px) {
-
-    .column{
-        padding: 0em;
-    }
-
-    .column1{
-        padding-left: 0em;
-        padding-right: 0em;
-    }
-
-   .row {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 1fr;
-    }
-
-    .image {
-        grid-column: 1/2;
-        grid-row: 1/2;
-    }
-
-    .column1 {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        padding-left: 1em;
-    }
-
-}
 
 @media screen and (min-width:1000px){
-    .column{
-        padding: 5em;
-    }
+.row {
 
-    .column1{
-        padding-top: 5em;
-    }
+      -webkit-column-count: 2; /* Chrome, Safari, Opera */
+  -moz-column-count: 2; /* Firefox */
+  column-count: 2;
+
+  -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+  -moz-column-gap: 40px; /* Firefox */
+  column-gap: 40px;
+
 }
+
+p {
+   font-size: 1em;
+
+
+     padding: 20px 0px;
+}
+
+h2 {
+   display: none;
+
+
+
+}
+
+}
+
+
 
 
 /*    --------til toppen knappen----------*/
