kob knap virker

--- a/CSS/webshop.css
+++ b/CSS/webshop.css
@@ -364,6 +364,8 @@ h1 {
 
   /*    --------til toppen knappen----------*/
 
+/*    --------til toppen knappen----------*/
+
 #button {
     border-radius: 50%;
     display: none;
