--- a/CSS/webshop.css
+++ b/CSS/webshop.css
@@ -166,6 +166,7 @@
          font-weight: 300;
          margin-bottom: 1em;
           border: none;
+    background-color: none;
 
 
 }
@@ -174,7 +175,7 @@
 text-align: center;
          border: none;
 
-
+background-color: none;
          margin-bottom: 3em;
 
      }
@@ -337,9 +338,9 @@ h1 {
   -moz-column-count: 2; /* Firefox */
   column-count: 2;
 
-  -webkit-column-gap: 60px; /* Chrome, Safari, Opera */
-  -moz-column-gap: 60px; /* Firefox */
-  column-gap: 60px;
+  -webkit-column-gap: 5%; /* Chrome, Safari, Opera */
+  -moz-column-gap: 5%; /* Firefox */
+  column-gap: 5%;
 
   -webkit-column-rule: 4px double #0B584D; /* Chrome, Safari, Opera */
   -moz-column-rule: 4px double #0B584D; /* Firefox */
